@@ -17,7 +17,8 @@
 @Library('github.com/fabric8io/fabric8-pipeline-library@master')
 def dummy
 goTemplate{
-  mavenNode {
+  def parameters = ['javaOptions':'-Duser.home=/root/ -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Dsun.zip.disableMemoryMapping=true -XX:+UseParallelGC -XX:MinHeapFreeRatio=5 -XX:MaxHeapFreeRatio=10 -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Xms10m -Xmx2048m']
+  mavenNode(parameters) {
     ws{
 
 
